--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,29 @@
 spring.application.name=studentManagementSystem
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sms_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/sms_db?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# H2 Database Configuration
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:student_db
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.datasource.username=admin
+spring.datasource.password=password
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+
+server.port=8000
+logging.level.root=info
+
